2010-11-09  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/46373
	* io/transfer.c (data_transfer_init): Do not call flush_if_preconnected
	if this is an internal unit.

2010-11-04  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/44931
	* io/inquire.c (inquire_via_unit): Use stream_ttyname() instead of
	calling ttyname() directly.
	* io/unix.h (unix_stream): Move struct to unix.c.
	* io/unix.c: Move struct unix_stream here.
	(stream_ttyname): Don't mark the argument as unused if it is used.

2010-11-04  Janne Blomqvist  <jb@gcc.gnu.org>

	* io/unix.h (struct unix_stream): Remove prot member.
	* io/unix.c: Remove PROT_READ and PROT_WRITE constants.
	(fd_to_stream): Remove prot from argument list, don't set prot.
	(open_external): Don't set prot flag.
	(input_stream): Remove prot from argument list.
	(output_stream): Likewise.
	(error_stream): Likewise.

2010-11-03  Janne Blomqvist  <jb@gcc.gnu.org>

	* io/unix.h: Remove empty_internal_buffer prototype.
	* io/unix.c (empty_internal_buffer): Remove unused function.

2010-11-03  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/43899
	* runtime/error.c (generate_warning): New function to generate a run
	time warning message. Fix some whitespace.
	* libgfortran.h: Add prototype for new function.
	* io/list_read.c (nml_read_obj): Use new function to warn when a
	character namelist object is truncated.  Only warn if compiled
	with -fbounds-check.

2010-11-02  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libfortran/45629
	* io/io.h: Remove setjmp.h include.
	(st_parameter_dt): Change last_char to int, remove eof_jump.
	* io/list_read.c (next_char): Return EOF instead of jumping.
	(unget_char): Use int to be able to handle EOF.
	(eat_spaces): Handle EOF return from next_char.
	(eat_line): Likewise.
	(eat_separator): Handle EOF return from next_char, eat_spaces,
	eat_line.
	(finish_separator): Likewise.
	(convert_integer): Likewise.
	(read_logical): Likewise.
	(read_integer): Likewise.
	(read_character): Likewise.